--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <img id="icon" src="" alt="">
             <h1 id="city">--</h1>
             <h3><span id="temp">--</span>&deg;C</h3>
-            <h1 id="cloud-status" class="lead">Clouds</h1>
+            <h1 id="cloud-status" class="lead">--</h1>
             <h1 id="timezone"></h1>
 
         </div>
